--- a/teamstudy/src/App.css
+++ b/teamstudy/src/App.css
@@ -40,3 +40,16 @@
 .read-the-docs {
   color: #888;
 }
+
+@keyframes spinY {
+  0% {
+    transform: rotateY(0deg);
+  }
+  100% {
+    transform: rotateY(360deg);
+  }
+}
+
+.spinY {
+  animation: spinY 2s linear infinite;
+}
