Added Fronttend code

--- a/teamstudy/src/App.css
+++ b/teamstudy/src/App.css
@@ -1,8 +1,13 @@
 #root {
-  max-width: 1280px;
+  /* max-width: 1280px; */
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  /* overflow: hidden; */
+  height: 100%;
 }
 
 .logo {
@@ -53,3 +58,5 @@
 .spinY {
   animation: spinY 2s linear infinite;
 }
+
+
